--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
   
   <script src="//code.jquery.com/jquery-3.3.1.min.js"></script>
   <script src="//unpkg.com/slick-carousel@1.8.1/slick/slick.js"></script>
+
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
