--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+  <script src="http://maps.googleapis.com/maps/api/js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
