--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>RavindraAdmin</title>
+  <title>Ravindra Energy Dashboard</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,7 +14,6 @@
 
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-  <script src="https://maps.googleapis.com/maps/api/js"></script>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
